fixed iphone whitespace error

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -233,6 +233,7 @@ textarea {
 html {
     width: 100vw;
     height: 100vh;
+    padding: env(safe-area-inset);
 }
 
 html {
